RESOLVED FIXED294251
REGRESSION(295500@main): [GStreamer] Assert when running http/tests/media/video-cross-site.html
https://bugs.webkit.org/show_bug.cgi?id=294251
Summary REGRESSION(295500@main): [GStreamer] Assert when running http/tests/media/vid...
Philippe Normand
Reported 2025-06-10 06:07:34 PDT
STDERR: ASSERTION FAILED: isMainThread() STDERR: /app/webkit/Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp(124) : const WTF::Vector<WTF::String>& WebCore::CDMFactoryThunder::supportedKeySystems() const STDERR: 1 0x7f15dc27f3c6 WebCore::CDMFactoryThunder::supportedKeySystems() const STDERR: 2 0x7f15dc212f6e WebCore::MediaPlayerPrivateGStreamer::configureUriDecodebin2(_GstElement*) STDERR: 3 0x7f15dc21330a WebCore::MediaPlayerPrivateGStreamer::configureElement(_GstElement*) STDERR: 4 0x7f15dc217e1d operator() STDERR: 5 0x7f15dc217e4c _FUN STDERR: 6 0x7f15c1bdef67 g_cclosure_marshal_VOID__OBJECTv STDERR: 7 0x7f15c1c00a83 g_signal_emit_valist STDERR: 8 0x7f15c1c00c03 g_signal_emit STDERR: 9 0x7f155c0938cb gst_play_bin_deep_element_added.lto_priv.0 STDERR: 10 0x7f15bcb0e056 ffi_call_unix64 STDERR: 11 0x7f15bcb0cb5d ffi_call_int STDERR: 12 0x7f15bcb0d313 ffi_call STDERR: 13 0x7f15c1be6b43 g_cclosure_marshal_generic_va STDERR: 14 0x7f15c1c00a83 g_signal_emit_valist STDERR: 15 0x7f15c1c00c03 g_signal_emit STDERR: 16 0x7f15c2d8f72a gst_bin_do_deep_add_remove STDERR: 17 0x7f15c2d94dcd gst_bin_add_func STDERR: 18 0x7f15c2d8eadf gst_bin_add STDERR: 19 0x7f155c0c1c59 setup_next_source.constprop.0 STDERR: 20 0x7f155c09a5bc gst_play_bin_handle_message.lto_priv.0 STDERR: 21 0x7f15c2d8919c bin_bus_handler STDERR: 22 0x7f15c2da0dab gst_bus_post STDERR: 23 0x7f15c2db7247 gst_element_post_message_default STDERR: 24 0x7f15c2d93a83 gst_bin_post_message STDERR: 25 0x7f15c2db4dd7 gst_element_post_message STDERR: 26 0x7f15c2d8919c bin_bus_handler STDERR: 27 0x7f15c2da0dab gst_bus_post STDERR: 28 0x7f15c2db7247 gst_element_post_message_default STDERR: 29 0x7f15c2d93a83 gst_bin_post_message STDERR: 30 0x7f15c2db4dd7 gst_element_post_message STDERR: 31 0x7f155c056ec0 gst_decode_bin_handle_message STDERR: WPEWebProcess terminated (pid 157562) for reason: crash
Attachments
Philippe Normand
Comment 1 2025-06-10 06:45:56 PDT
EWS
Comment 2 2025-06-11 22:25:47 PDT
Committed 296122@main (990c52369742): <https://commits.webkit.org/296122@main> Reviewed commits have been landed. Closing PR #46540 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-06-11 22:26:15 PDT
Note You need to log in before you can comment on or make changes to this bug.