REGRESSION(295500@main): [GStreamer] Assert when running http/tests/media/video-cross-site.html https://bugs.webkit.org/show_bug.cgi?id=294251

Reviewed by Xabier Rodriguez-Calvar.

Initialize Thunder key systems within the CDMFactory constructor, which is first called from
GStreamerCommon's initialization and make the supportedKeySystems() callable from non-main thread.

* Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::CDMFactoryThunder::CDMFactoryThunder):
(WebCore::CDMFactoryThunder::supportedKeySystems const):
* Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.h:

Canonical link: https://commits.webkit.org/296122@main