Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.h
@@ -66,7 +66,8 @@ public:
 
 private:
     friend class NeverDestroyed<CDMFactoryThunder>;
-    CDMFactoryThunder() = default;
+    CDMFactoryThunder();
+    Vector<String> m_supportedKeySystems;
 };
 
 class CDMPrivateThunder final : public CDMPrivate {
